--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.9",
+    "nodemailer": "^6.4.6",
+    "nodemailer-smtp-transport": "^2.7.4",
     "shortid": "^2.2.15",
     "socket.io": "^2.3.0"
   },
